--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
-  <version>0.4</version>
+  <version>0.5-SNAPSHOT</version>
 
   <name>Google Cloud Storage plugin</name>
   <description>
