--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
           <effort>Max</effort>
           <threshold>Medium</threshold>
           <xmlOutput>true</xmlOutput>
+          <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
         </configuration>
         <executions>
           <execution>
@@ -210,7 +211,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>0.1</version>
+      <version>0.2</version>
     </dependency>
 
     <!-- Metadata dependency -->
