--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.521</version>
+    <version>1.619</version>
   </parent>
 
 
@@ -53,6 +53,10 @@
       <id>tcnghia</id>
       <name>Nghia Tran</name>
     </developer>
+    <developer>
+      <id>astroilov</id>
+      <name>Andrey Stroilov</name>
+    </developer>
   </developers>
 
   <scm>
@@ -82,8 +86,8 @@
 	<artifactId>maven-compiler-plugin</artifactId>
 	<version>3.1</version>
 	<configuration>
-	  <source>1.6</source>
-	  <target>1.6</target>
+	  <source>1.7</source>
+	  <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
