--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /.project
 /.settings
 /target
+
+# IntelliJ project files.
+/.idea
+/*.iml
+
+# Jenkins home directory when running "mvn hpi:run".
+/work
