--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>Google Cloud Storage plugin</name>
   <description>
@@ -71,7 +71,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}</url>
-    <tag>google-storage-plugin-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <repositories>
     <repository>
