--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.5</version>
+    <version>3.0</version>
   </parent>
 
 
@@ -27,7 +27,7 @@
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
 
   <name>Google Cloud Storage plugin</name>
   <description>
@@ -71,7 +71,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}</url>
-    <tag>HEAD</tag>
+    <tag>google-storage-plugin-1.0</tag>
   </scm>
   <repositories>
     <repository>
@@ -92,16 +92,16 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.1</version>
+	<version>3.5.1</version>
 	<configuration>
-	  <source>1.7</source>
-	  <target>1.7</target>
+	  <source>1.8</source>
+	  <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
 	<groupId>org.jenkins-ci.tools</groupId>
 	<artifactId>maven-hpi-plugin</artifactId>
-	<version>1.96</version>
+	<version>2.1</version>
 	<extensions>true</extensions>
 	<configuration>
 	  <disabledTestInjection>true</disabledTestInjection>
@@ -110,9 +110,10 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-checkstyle-plugin</artifactId>
-	<version>2.9</version>
+	<version>2.15</version>
 	<configuration>
-	  <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <skip>true</skip>
+	  <includeTestSourceDirectory>false</includeTestSourceDirectory>
 	  <configLocation>checkstyle.xml</configLocation>
 	  <failsOnError>true</failsOnError>
 	  <violationSeverity>warning</violationSeverity>
@@ -129,7 +130,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.0.2</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Medium</threshold>
@@ -147,7 +148,7 @@
       <plugin>
 	<groupId>org.codehaus.mojo</groupId>
 	<artifactId>cobertura-maven-plugin</artifactId>
-	<version>2.5.2</version>
+	<version>2.7</version>
 	<configuration>
           <instrumentation>
             <excludes>
@@ -168,32 +169,33 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9</version>
+        <version>2.10</version>
       </plugin>
     </plugins>
   </reporting>
 
   <!-- Bring some sanity to version numbering... -->
   <properties>
-    <google.api.version>1.19.0</google.api.version>
+    <!--<google.api.version>1.23.0</google.api.version>-->
+    <java.version>1.8</java.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>structs</artifactId>
-      <version>1.2</version>
+      <version>1.10</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.findbugs</groupId>
       <artifactId>jsr305</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.7</version>
     </dependency>
     <!-- com.google.guava -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>14.0.1</version>
+      <version>23.4-jre</version>
     </dependency>
 
     <!-- org.joda.time -->
@@ -201,7 +203,7 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <!-- XStream has deserialization warnings for Jodatime 2.0 or later -->
-      <version>1.5.1</version>
+      <version>2.9.9</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -214,26 +216,26 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.8.4</version>
+      <version>1.10.19</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.2</version>
+      <version>4.5.3</version>
     </dependency>
 
     <!-- Auth dependency -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>0.2</version>
+      <version>0.3</version>
     </dependency>
 
     <!-- Metadata dependency -->
@@ -242,13 +244,29 @@
       <artifactId>google-metadata-plugin</artifactId>
       <version>0.2</version>
     </dependency>
-
+    <!--                   /////////////////////////////   -->
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson</artifactId>
+      <version>1.23.0</version>
+    </dependency> 
+    <dependency>
+     <groupId>com.google.api-client</groupId>
+     <artifactId>google-api-client</artifactId>
+     <version>1.23.0</version>
+    </dependency>
+    <!--                   /////////////////////////////    -->
     <!-- com.google.apis -->
     <!-- https://developers.google.com/api-client-library/java/apis/storage/v1 -->
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-storage</artifactId>
-      <version>v1-rev12-${google.api.version}</version>
+      <version>v1-rev116-1.22.0</version>
     </dependency>
   </dependencies>
 </project>
