--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,15 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.0</version>
+    <version>3.18</version>
   </parent>
-
 
   <!--
       Lots of boilerplate from: https://wiki.jenkins-ci.org/display/JENKINS/Hosting+Plugins
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
-  <version>1.1</version>
+  <version>1.1.1</version>
 
   <name>Google Cloud Storage plugin</name>
   <description>
@@ -92,7 +91,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.5.1</version>
+	<version>3.7.0</version>
 	<configuration>
 	  <source>1.8</source>
 	  <target>1.8</target>
@@ -101,7 +100,7 @@
       <plugin>
 	<groupId>org.jenkins-ci.tools</groupId>
 	<artifactId>maven-hpi-plugin</artifactId>
-	<version>2.1</version>
+	<version>2.6</version>
 	<extensions>true</extensions>
 	<configuration>
 	  <disabledTestInjection>true</disabledTestInjection>
@@ -169,7 +168,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10</version>
+        <version>2.10.4</version>
       </plugin>
     </plugins>
   </reporting>
@@ -178,13 +177,15 @@
   <properties>
     <!--<google.api.version>1.23.0</google.api.version>-->
     <java.version>1.8</java.version>
+     <jenkins.version>2.0</jenkins.version>
+    <java.level>8</java.level>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>structs</artifactId>
-      <version>1.10</version>
+      <version>1.14</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.findbugs</groupId>
@@ -203,7 +204,7 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <!-- XStream has deserialization warnings for Jodatime 2.0 or later -->
-      <version>2.9.9</version>
+      <version>2.10</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -235,7 +236,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>0.3</version>
+      <version>0.6</version>
     </dependency>
 
     <!-- Metadata dependency -->
@@ -254,7 +255,7 @@
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client-jackson</artifactId>
       <version>1.23.0</version>
-    </dependency> 
+    </dependency>
     <dependency>
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
@@ -266,7 +267,7 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-storage</artifactId>
-      <version>v1-rev116-1.22.0</version>
+      <version>v1-rev135-1.23.0</version>
     </dependency>
   </dependencies>
 </project>
