--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
-  <version>1.1.2</version>
+  <version>1.1.2b</version>
 
   <name>Google Cloud Storage plugin</name>
   <description>
