--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
  Copyright 2013 Google LLC
 
@@ -20,21 +21,14 @@
     <artifactId>plugin</artifactId>
     <version>2.5</version>
   </parent>
-
-
   <!--
       Lots of boilerplate from: https://wiki.jenkins-ci.org/display/JENKINS/Hosting+Plugins
   -->
   <artifactId>google-storage-plugin</artifactId>
   <packaging>hpi</packaging>
   <version>1.3-SNAPSHOT</version>
-
   <name>Google Cloud Storage plugin</name>
-  <description>
-    This plugin provides the “Google Cloud Storage Uploader”
-    post-build step for publishing build artifacts to Google Cloud
-    Storage.
-  </description>
+  <description>This plugin provides the “Google Cloud Storage Uploader” post-build step for publishing build artifacts to Google Cloud Storage.</description>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Google+Cloud+Storage+Plugin</url>
   <licenses>
     <license>
@@ -43,7 +37,6 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-
   <developers>
     <developer>
       <id>craigatgoogle</id>
@@ -61,7 +54,6 @@
       <email>stephenshank@google.com</email>
     </developer>
   </developers>
-
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
@@ -74,51 +66,66 @@
       <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
-
   <pluginRepositories>
     <pluginRepository>
       <id>repo.jenkins-ci.org</id>
       <url>http://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
-
   <build>
     <plugins>
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.1</version>
-	<configuration>
-	  <source>1.7</source>
-	  <target>1.7</target>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
-	<groupId>org.jenkins-ci.tools</groupId>
-	<artifactId>maven-hpi-plugin</artifactId>
-	<version>1.96</version>
-	<extensions>true</extensions>
-	<configuration>
-	  <disabledTestInjection>true</disabledTestInjection>
-	</configuration>
+        <groupId>au.com.acegi</groupId>
+        <artifactId>xml-format-maven-plugin</artifactId>
+        <version>3.0.7</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>xml-format</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includes>pom.xml</includes>
+        </configuration>
       </plugin>
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-checkstyle-plugin</artifactId>
-	<version>2.9</version>
-	<configuration>
-	  <includeTestSourceDirectory>true</includeTestSourceDirectory>
-	  <configLocation>checkstyle.xml</configLocation>
-	  <failsOnError>true</failsOnError>
-	  <violationSeverity>warning</violationSeverity>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>1.96</version>
+        <extensions>true</extensions>
+        <configuration>
+          <disabledTestInjection>true</disabledTestInjection>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <configLocation>checkstyle.xml</configLocation>
+          <failsOnError>true</failsOnError>
+          <violationSeverity>warning</violationSeverity>
           <consoleOutput>true</consoleOutput>
-	</configuration>
-       <executions>
-         <execution>
-           <goals>
-             <goal>check</goal>
-           </goals>
-         </execution>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -140,24 +147,23 @@
         </executions>
       </plugin>
       <plugin>
-	<groupId>org.codehaus.mojo</groupId>
-	<artifactId>cobertura-maven-plugin</artifactId>
-	<version>2.5.2</version>
-	<configuration>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.2</version>
+        <configuration>
           <instrumentation>
             <excludes>
               <exclude>com/google/jenkins/plugins/**/Messages.class</exclude>
             </excludes>
           </instrumentation>
-	  <formats>
-	    <format>html</format>
-	    <format>xml</format>
-	  </formats>
-	</configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-
   <reporting>
     <plugins>
       <plugin>
@@ -167,12 +173,10 @@
       </plugin>
     </plugins>
   </reporting>
-
   <!-- Bring some sanity to version numbering... -->
   <properties>
     <google.api.version>1.19.0</google.api.version>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -190,7 +194,6 @@
       <artifactId>guava</artifactId>
       <version>14.0.1</version>
     </dependency>
-
     <!-- org.joda.time -->
     <dependency>
       <groupId>joda-time</groupId>
@@ -198,7 +201,6 @@
       <!-- XStream has deserialization warnings for Jodatime 2.0 or later -->
       <version>1.5.1</version>
     </dependency>
-
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.hamcrest</groupId>
@@ -223,21 +225,18 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
     </dependency>
-
     <!-- Auth dependency -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
       <version>0.2</version>
     </dependency>
-
     <!-- Metadata dependency -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-metadata-plugin</artifactId>
       <version>0.2</version>
     </dependency>
-
     <!-- com.google.apis -->
     <!-- https://developers.google.com/api-client-library/java/apis/storage/v1 -->
     <dependency>
