--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,17 @@
 
   <!-- Bring some sanity to version numbering... -->
   <properties>
+    <jenkins.version>2.164.2</jenkins.version>
     <google.api.version>1.24.1</google.api.version>
     <java.level>8</java.level>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -186,6 +192,30 @@
             <format>html</format>
             <format>xml</format>
           </formats>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.20.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <disableXmlReport>true</disableXmlReport>
+          <useFile>false</useFile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <skipTests>${skip.surefire.tests}</skipTests>
         </configuration>
       </plugin>
     </plugins>
