Fix SCM URL to secure link

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
-    <url>http://github.com/jenkinsci/${project.artifactId}</url>
+    <url>https://github.com/jenkinsci/${project.artifactId}</url>
     <tag>HEAD</tag>
   </scm>
 
