validate the format, do not format
if we refromat the code on build then CD releases will fail as they are
dirty.

instead fail the build, let users run the formatter manually

--- a/pom.xml
+++ b/pom.xml
@@ -307,8 +307,9 @@
         </configuration>
         <executions>
           <execution>
+            <id>check-source-format</id>
             <goals>
-              <goal>format</goal>
+              <goal>check</goal>
             </goals>
           </execution>
         </executions>
